Carga de tablas en las vistas

--- a/inventario/apps/products/templates/Dashboard V2/AdminX-master/layouts/tables.html
+++ b/inventario/apps/products/templates/Dashboard V2/AdminX-master/layouts/tables.html
@@ -407,8 +407,11 @@
               <ol class="breadcrumb adminx-page-breadcrumb">
                 <li class="breadcrumb-item"><a href="#">Home</a></li>
                 <li class="breadcrumb-item"><a href="#">Tables</a></li>
-                <li class="breadcrumb-item active  aria-current="page">Regular Tables</li>
-              </ol>
+<!--
+                <li class="breadcrumb-item active aria-current="page">Regular Tables
+                </li>
+-->
+                         </ol>
             </nav>
 
             <div class="pb-3">
@@ -442,7 +445,7 @@
                         <tr>
                           <th scope="row">
                             <label class="custom-control custom-checkbox m-0 p-0">
-                              <input type="checkbox" class="custom-control-input table-select-row">
+                              <inp€ut type="checkbox" class="custom-control-input table-select-row">
                               <span class="custom-control-indicator"></span>
                             </label>
                           </th>
