--- a/inventario/apps/products/templates/Generic.html
+++ b/inventario/apps/products/templates/Generic.html
@@ -3,33 +3,39 @@
 <head>
 <meta charset="UTF-8">
 <title>Administracion de Inventario</title>
+<!-- Scripts CSS -->
 {% load staticfiles %}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
-<link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" id="bootstrap-css">
 <link rel="stylesheet" type="text/css" href="{% static 'css/style.css'%}" media="screen">
 <link rel="stylesheet" type="text/css" href="{% static 'css/adminx.css'%}" media="screen">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
 <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
+<!-- Scrip JS-->
+<script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
+<script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js'></script>
+<script src="{% static 'js/script.js'%}"></script>
+<script src="{% static 'js/adminx.js'%}"></script>
+<script src="{% static 'js/vendor.js'%}"></script>
+<!-- Fin Scripts -->
+</head>
+<!-- partial:index.partial.html -->
+
 
 <body class="home">
     <div class="container-fluid display-table">
         <div class="row display-table-row">
             <div class="col-md-2 col-sm-1 hidden-xs display-table-cell v-align box" id="navigation">
                 <div class="logo">
-                    <a hef="home.html"><img src="{% static 'logo.png'%}" alt="merkery_logo" class="hidden-xs hidden-sm">
+                    <a hef="home.html"><img src="{% static 'img/logo.png'%}" alt="merkery_logo" class="hidden-xs hidden-sm">
                         <img src="{% static 'img/circle-logo.png'%}" alt="merkery_logo" class="visible-xs visible-sm circle-logo">
                     </a>
                 </div>
                 <div class="navi">
                     <ul>
-                        <li class="active"><a href="#"><i class="fa fa-home" aria-hidden="true"></i><span class="hidden-xs hidden-sm">Home</span></a></li>
-                        <li><a href="#"><i class="fa fa-tasks" aria-hidden="true"></i><span class="hidden-xs hidden-sm">Workflow</span></a></li>
-                        <li><a href="#"><i class="fa fa-bar-chart" aria-hidden="true"></i><span class="hidden-xs hidden-sm">Statistics</span></a></li>
-                        <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i><span class="hidden-xs hidden-sm">Calender</span></a></li>
-                        <li><a href="#"><i class="fa fa-calendar" aria-hidden="true"></i><span class="hidden-xs hidden-sm">Users</span></a></li>
+                        <li class="active"><a href="{% url 'home' %}"><i class="fa fa-home" aria-hidden="true"></i><span class="hidden-xs hidden-sm">Home</span></a></li>
+                        <li><a href="{% url 'list' %}"><i class="fa fa-tasks" aria-hidden="true"></i><span class="hidden-xs hidden-sm">Productos</span></a></li>
+                        <li><a href="{% url 'statistics' %}"><i class="fa fa-bar-chart" aria-hidden="true"></i><span class="hidden-xs hidden-sm">Estadisticas</span></a></li>
+                        <li><a href="#"><i class="fa fa-user" aria-hidden="true"></i><span class="hidden-xs hidden-sm">Venta</span></a></li>
                         <li><a href="#"><i class="fa fa-cog" aria-hidden="true"></i><span class="hidden-xs hidden-sm">Setting</span></a></li>
                     </ul>
                 </div>
@@ -49,20 +55,29 @@
                                     </button>
                                 </div>
                             </nav>
-                            <div class="search hidden-xs hidden-sm">
+                            {% comment %} <div class="search hidden-xs hidden-sm">
                                 <input type="text" placeholder="Search" id="search">
-                            </div>
+                            </div> {% endcomment %}
                         </div>
                         <div class="col-md-5">
                             <div class="header-rightside">
                                 <ul class="list-inline header-top pull-right">
-                                    <li class="hidden-xs"><a href="#" class="add-project" data-toggle="modal" data-target="#add_project">Add Project</a></li>
-                                    <li><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a></li>
+                                        <li class="hidden-xs">
+                                        {% comment %} <a href="#" class="add-project" data-toggle="modal" data-target="#add_project">Agregar Producto</a> {% endcomment %}
+                                            <a href="#add_project" class="create-product" data-toggle="modal" >Crear Producto</a>
+                                        </li>
+                                        <li class="hidden-xs">
+                                        {% comment %} <a href="#" class="add-project" data-toggle="modal" data-target="#add_project">Agregar Producto</a> {% endcomment %}
+                                            <a class="add-project" data-toggle="modal" data-target="#add_project">Actualizar Stock</a>
+                                        </li>
                                     <li>
-                                        <a href="#" class="icon-info">
+                                        <a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                                    </li>
+                                    <li>
+                                        {% comment %} <a href="#" class="icon-info">
                                             <i class="fa fa-bell" aria-hidden="true"></i>
-                                            <span class="label label-primary">3</span>
-                                        </a>
+                                            <span class="label label-primary">8</span>
+                                        </a> {% endcomment %}
                                     </li>
                                     <li class="dropdown">
                                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><img src="{% static 'img/user-pic.jpg'%}" alt="user">
@@ -76,7 +91,8 @@
                                                     </p>
                                                     <div class="divider">
                                                     </div>
-                                                    <a href="#" class="view btn-sm active">View Profile</a>
+                                                        <a href="#" class="view btn-sm active">View Profile</a>
+                                                    </div>
                                                 </div>
                                             </li>
                                         </ul>
@@ -91,9 +107,6 @@
         </div>
 
     </div>
-
-
-
     <!-- Modal -->
     <div id="add_project" class="modal fade" role="dialog">
         <div class="modal-dialog">
@@ -120,14 +133,11 @@
     </div>
 
 </body>
-<!-- partial -->
-  <script src='https://code.jquery.com/jquery-2.2.4.min.js'></script>
-<script src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js'></script>
-<script src="{% static 'js/script.js'%}"></script>
-<script src="{% static 'js/adminx.js'%}"></script>
-<script src="{% static 'js/vendor.js'%}"></script>
-
-
-
-</body>
+{% comment %} <script type="text/javascript">
+$(document).ready(function() {
+    $('[data-toggle="offcanvas"]').click(function() {
+        $("#navigation").toggleClass("hidden-xs");
+    });
+});
+</script> {% endcomment %}
 </html>
