--- a/inventario/apps/products/templates/home/home.html
+++ b/inventario/apps/products/templates/home/home.html
@@ -5,7 +5,7 @@
 <!-- Main Content -->
 
   
-  <div class="container-fluid">
+  {% comment %} <div class="container-fluid" > {% endcomment %}
     <h1>Hello, JS</h1>
       <div class="row">
         <div class="col-md-5 col-sm-5 col-xs-12 gutter">
@@ -21,7 +21,7 @@
       </div>
     <div class="container">
       <div class="row">
-        <table id="example" class="table table-striped table-bordered" style="width:100%">
+        <table id="example" class="table table-striped table-bordered table-hover table-sm table-responsive" style="width:100%">
             <thead>
                 <tr>
                     <th><input type="checkbox" onclick="checkAll(this)"></th>
@@ -39,6 +39,7 @@
                 </tr>
             </thead>
               <tbody>
+                {% for product in object_list %}
                   <tr>
                         <td><input type="checkbox" name=""></td>
                       {% comment %} <th scope="row">
@@ -48,339 +49,32 @@
                         </label>
                       </th> {% endcomment %}
                       <td>Image</td>
-                      <td>010101010101</td>
-                      <td>Casa carlos</td>
-                      <td>Celular Rojo</td>
-                      <td>$15.500</td>
-                      <td>$20.000</td>
+                      <td>{{product.id}}</td>
+                      <td>{{product.productProvider }}</td>
+                      <td>{{product.description}}</td>
+                      <td>{{product.buy_price}}</td>
+                      <td>{{product.sale_price}}</td>
                       <td>
-                        <span class="badge badge-pill badge-primary">Electronicos</span>
+                        <span class="badge badge-pill badge-primary">{{product.categoryProduct}}</span>
                       </td>
-                      <td>Local 1</td>
+                      <td>{{product.warehouseProduct}}</td>
                       <td>
+                      {% if product.isActive%}
                         <span class="badge badge-pill badge-success">Active</span>
+                      {% else %}
+                        <span class="badge badge-pill badge-Secondary">Inactiv</span>
+                      {% endif %}
+
                       </td>
                       <td>
-                        <span class="badge badge-pill badge-success">150 U</span>
+                        <span class="badge badge-pill badge-success">{{product.stock}}</span>
                       </td>
                       <td>
                         <button class="btn btn-sm btn-primary">Editar</button>
                         <button class="btn btn-sm btn-danger">Delete</button>
                       </td>
                   </tr>
-                  <tr>
-                        <td><input type="checkbox" name=""></td>
-                      {% comment %} <th scope="row">
-                        <label class="custom-control custom-checkbox m-0 p-0">
-                          <input type="checkbox" class="custom-control-input table-select-row">
-                          <span class="custom-control-indicator"></span>
-                        </label>
-                      </th> {% endcomment %}
-                      <td>Image</td>
-                      <td>010101010101</td>
-                      <td>Casa carlos</td>
-                      <td>Celular Rojo</td>
-                      <td>$15.500</td>
-                      <td>$20.000</td>
-                      <td>
-                        <span class="badge badge-pill badge-primary">Electronicos</span>
-                      </td>
-                      <td>Local 1</td>
-                      <td>
-                        <span class="badge badge-pill badge-success">Active</span>
-                      </td>
-                      <td>
-                        <span class="badge badge-pill badge-success">150 U</span>
-                      </td>
-                      <td>
-                        <button class="btn btn-sm btn-primary">Editar</button>
-                        <button class="btn btn-sm btn-danger">Delete</button>
-                      </td>
-                  </tr>            <tr>
-                        <td><input type="checkbox" name=""></td>
-                      {% comment %} <th scope="row">
-                        <label class="custom-control custom-checkbox m-0 p-0">
-                          <input type="checkbox" class="custom-control-input table-select-row">
-                          <span class="custom-control-indicator"></span>
-                        </label>
-                      </th> {% endcomment %}
-                      <td>Image</td>
-                      <td>010101010101</td>
-                      <td>Casa carlos</td>
-                      <td>Celular Azul</td>
-                      <td>$15.500</td>
-                      <td>$20.000</td>
-                      <td>
-                        <span class="badge badge-pill badge-primary">Electronicos</span>
-                      </td>
-                      <td>Local 1</td>
-                      <td>
-                        <span class="badge badge-pill badge-success">Active</span>
-                      </td>
-                      <td>
-                        <span class="badge badge-pill badge-success">150 U</span>
-                      </td>
-                      <td>
-                        <button class="btn btn-sm btn-primary">Editar</button>
-                        <button class="btn btn-sm btn-danger">Delete</button>
-                      </td>
-                  </tr>            <tr>
-                        <td><input type="checkbox" name=""></td>
-                      {% comment %} <th scope="row">
-                        <label class="custom-control custom-checkbox m-0 p-0">
-                          <input type="checkbox" class="custom-control-input table-select-row">
-                          <span class="custom-control-indicator"></span>
-                        </label>
-                      </th> {% endcomment %}
-                      <td>Image</td>
-                      <td>010101010101</td>
-                      <td>Casa carlos</td>
-                      <td>Celular Rojo</td>
-                      <td>$15.500</td>
-                      <td>$20.000</td>
-                      <td>
-                        <span class="badge badge-pill badge-primary">Electronicos</span>
-                      </td>
-                      <td>Local 2</td>
-                      <td>
-                        <span class="badge badge-pill badge-success">Active</span>
-                      </td>
-                      <td>
-                        <span class="badge badge-pill badge-success">150 U</span>
-                      </td>
-                      <td>
-                        <button class="btn btn-sm btn-primary">Editar</button>
-                        <button class="btn btn-sm btn-danger">Delete</button>
-                      </td>
-                  </tr>            <tr>
-                        <td><input type="checkbox" name=""></td>
-                      {% comment %} <th scope="row">
-                        <label class="custom-control custom-checkbox m-0 p-0">
-                          <input type="checkbox" class="custom-control-input table-select-row">
-                          <span class="custom-control-indicator"></span>
-                        </label>
-                      </th> {% endcomment %}
-                      <td>Image</td>
-                      <td>010101010101</td>
-                      <td>Casa carlos</td>
-                      <td>Celular Rojo</td>
-                      <td>$15.500</td>
-                      <td>$20.000</td>
-                      <td>
-                        <span class="badge badge-pill badge-primary">Electronicos</span>
-                      </td>
-                      <td>Local 1</td>
-                      <td>
-                        <span class="badge badge-pill badge-success">Active</span>
-                      </td>
-                      <td>
-                        <span class="badge badge-pill badge-success">150 U</span>
-                      </td>
-                      <td>
-                        <button class="btn btn-sm btn-primary">Editar</button>
-                        <button class="btn btn-sm btn-danger">Delete</button>
-                      </td>
-                  </tr>            <tr>
-                        <td><input type="checkbox" name=""></td>
-                      {% comment %} <th scope="row">
-                        <label class="custom-control custom-checkbox m-0 p-0">
-                          <input type="checkbox" class="custom-control-input table-select-row">
-                          <span class="custom-control-indicator"></span>
-                        </label>
-                      </th> {% endcomment %}
-                      <td>Image</td>
-                      <td>010101010101</td>
-                      <td>Casa carlos</td>
-                      <td>Celular Rojo</td>
-                      <td>$15.500</td>
-                      <td>$20.000</td>
-                      <td>
-                        <span class="badge badge-pill badge-primary">Electronicos</span>
-                      </td>
-                      <td>Local 1</td>
-                      <td>
-                        <span class="badge badge-pill badge-success">Active</span>
-                      </td>
-                      <td>
-                        <span class="badge badge-pill badge-success">150 U</span>
-                      </td>
-                      <td>
-                        <button class="btn btn-sm btn-primary">Editar</button>
-                        <button class="btn btn-sm btn-danger">Delete</button>
-                      </td>
-                  </tr>
-                  <tr>
-                        <td><input type="checkbox" name=""></td>
-                      {% comment %} <th scope="row">
-                        <label class="custom-control custom-checkbox m-0 p-0">
-                          <input type="checkbox" class="custom-control-input table-select-row">
-                          <span class="custom-control-indicator"></span>
-                        </label>
-                      </th> {% endcomment %}
-                      <td>Image</td>
-                      <td>010101010101</td>
-                      <td>Casa carlos</td>
-                      <td>Celular Rojo</td>
-                      <td>$15.500</td>
-                      <td>$20.000</td>
-                      <td>
-                        <span class="badge badge-pill badge-primary">Electronicos</span>
-                      </td>
-                      <td>Local 1</td>
-                      <td>
-                        <span class="badge badge-pill badge-success">Active</span>
-                      </td>
-                      <td>
-                        <span class="badge badge-pill badge-success">150 U</span>
-                      </td>
-                      <td>
-                        <button class="btn btn-sm btn-primary">Editar</button>
-                        <button class="btn btn-sm btn-danger">Delete</button>
-                      </td>
-                  </tr>
-                  <tr>
-                        <td><input type="checkbox" name=""></td>
-                      {% comment %} <th scope="row">
-                        <label class="custom-control custom-checkbox m-0 p-0">
-                          <input type="checkbox" class="custom-control-input table-select-row">
-                          <span class="custom-control-indicator"></span>
-                        </label>
-                      </th> {% endcomment %}
-                      <td>Image</td>
-                      <td>010101010101</td>
-                      <td>Casa carlos</td>
-                      <td>Celular Rojo</td>
-                      <td>$15.500</td>
-                      <td>$20.000</td>
-                      <td>
-                        <span class="badge badge-pill badge-primary">Electronicos</span>
-                      </td>
-                      <td>Local 1</td>
-                      <td>
-                        <span class="badge badge-pill badge-success">Active</span>
-                      </td>
-                      <td>
-                        <span class="badge badge-pill badge-success">150 U</span>
-                      </td>
-                      <td>
-                        <button class="btn btn-sm btn-primary">Editar</button>
-                        <button class="btn btn-sm btn-danger">Delete</button>
-                      </td>
-                  </tr>
-                              <tr>
-                        <td><input type="checkbox" name=""></td>
-                      {% comment %} <th scope="row">
-                        <label class="custom-control custom-checkbox m-0 p-0">
-                          <input type="checkbox" class="custom-control-input table-select-row">
-                          <span class="custom-control-indicator"></span>
-                        </label>
-                      </th> {% endcomment %}
-                      <td>Image</td>
-                      <td>010101010101</td>
-                      <td>Casa carlos</td>
-                      <td>Celular Rojo</td>
-                      <td>$15.500</td>
-                      <td>$20.000</td>
-                      <td>
-                        <span class="badge badge-pill badge-primary">Electronicos</span>
-                      </td>
-                      <td>Local 1</td>
-                      <td>
-                        <span class="badge badge-pill badge-success">Active</span>
-                      </td>
-                      <td>
-                        <span class="badge badge-pill badge-success">150 U</span>
-                      </td>
-                      <td>
-                        <button class="btn btn-sm btn-primary">Editar</button>
-                        <button class="btn btn-sm btn-danger">Delete</button>
-                      </td>
-                  </tr>
-                              <tr>
-                        <td><input type="checkbox" name=""></td>
-                      {% comment %} <th scope="row">
-                        <label class="custom-control custom-checkbox m-0 p-0">
-                          <input type="checkbox" class="custom-control-input table-select-row">
-                          <span class="custom-control-indicator"></span>
-                        </label>
-                      </th> {% endcomment %}
-                      <td>Image</td>
-                      <td>010101010101</td>
-                      <td>Casa carlos</td>
-                      <td>Celular Rojo</td>
-                      <td>$15.500</td>
-                      <td>$20.000</td>
-                      <td>
-                        <span class="badge badge-pill badge-primary">Electronicos</span>
-                      </td>
-                      <td>Local 1</td>
-                      <td>
-                        <span class="badge badge-pill badge-success">Active</span>
-                      </td>
-                      <td>
-                        <span class="badge badge-pill badge-success">150 U</span>
-                      </td>
-                      <td>
-                        <button class="btn btn-sm btn-primary">Editar</button>
-                        <button class="btn btn-sm btn-danger">Delete</button>
-                      </td>
-                  </tr>            <tr>
-                        <td><input type="checkbox" name=""></td>
-                      {% comment %} <th scope="row">
-                        <label class="custom-control custom-checkbox m-0 p-0">
-                          <input type="checkbox" class="custom-control-input table-select-row">
-                          <span class="custom-control-indicator"></span>
-                        </label>
-                      </th> {% endcomment %}
-                      <td>Image</td>
-                      <td>010101010101</td>
-                      <td>Casa carlos</td>
-                      <td>Celular Rojo</td>
-                      <td>$15.500</td>
-                      <td>$20.000</td>
-                      <td>
-                        <span class="badge badge-pill badge-primary">Electronicos</span>
-                      </td>
-                      <td>Local 1</td>
-                      <td>
-                        <span class="badge badge-pill badge-success">Active</span>
-                      </td>
-                      <td>
-                        <span class="badge badge-pill badge-success">150 U</span>
-                      </td>
-                      <td>
-                        <button class="btn btn-sm btn-primary">Editar</button>
-                        <button class="btn btn-sm btn-danger">Delete</button>
-                      </td>
-                  </tr>            <tr>
-                        <td><input type="checkbox" name=""></td>
-                      {% comment %} <th scope="row">
-                        <label class="custom-control custom-checkbox m-0 p-0">
-                          <input type="checkbox" class="custom-control-input table-select-row">
-                          <span class="custom-control-indicator"></span>
-                        </label>
-                      </th> {% endcomment %}
-                      <td>Image</td>
-                      <td>010101010101</td>
-                      <td>Casa carlos1</td>
-                      <td>Celular Rojo</td>
-                      <td>$15.500</td>
-                      <td>$22.222</td>
-                      <td>
-                        <span class="badge badge-pill badge-primary">Electronicos</span>
-                      </td>
-                      <td>Local 1</td>
-                      <td>
-                        <span class="badge badge-pill badge-success">Active</span>
-                      </td>
-                      <td>
-                        <span class="badge badge-pill badge-success">150 U</span>
-                      </td>
-                      <td>
-                        <button class="btn btn-sm btn-primary">Editar</button>
-                        <button class="btn btn-sm btn-danger">Delete</button>
-                      </td>
-                  </tr>
+              {% endfor %}
               </tbody>
             <tfoot>
                 <tr>
@@ -401,7 +95,7 @@
         </table>
       </div>
     </div>
-  </div>
+  {% comment %} </div> {% endcomment %}
 <!-- Main Content -->
 
 <script type="text/javascript">
