--- a/inventario/apps/products/templates/home/home.html
+++ b/inventario/apps/products/templates/home/home.html
@@ -57,7 +57,7 @@
                       <td>
                         <span class="badge badge-pill badge-primary">{{product.categoryProduct}}</span>
                       </td>
-                      <td>{{product.warehouseProduct}}</td>
+                      <td>{{product.get_warehouse}}</td>
                       <td>
                       {% if product.isActive%}
                         <span class="badge badge-pill badge-success">Active</span>
