--- a/inventario/apps/products/templates/Generic.html
+++ b/inventario/apps/products/templates/Generic.html
@@ -6,6 +6,10 @@
     <title>Administracion de Inventario</title>
     <!-- Scripts CSS -->
     {% load staticfiles %}
+    <!-- <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script> -->
+    <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script> -->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" id="bootstrap-css">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css'%}" media="screen"> {% comment %}
@@ -65,7 +69,7 @@
                                 <ul class="list-inline header-top pull-right">
                                     <li class="hidden-xs">
                                         {% comment %} <a href="#" class="add-project" data-toggle="modal" data-target="#create_product">Agregar Producto</a> {% endcomment %}
-                                        <a class="add-project" data-toggle="modal" data-target="#create_product">Crear Producto</a>
+                                        <a class="btn btn-primary" data-toggle="modal" data-target="#create_product">Crear Producto</a>
                                     </li>
                                     <li>
                                         <a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a>
@@ -115,6 +119,7 @@
                 </div>
                 <div class="modal-body">
                     <form class="form" action="{% url 'create' %}" method='post' enctype="multipart/form-data">
+                        {% csrf_token %}
                         <div class="row">
                             <div class="col-sm-12">
                                 <div class="row">
@@ -156,7 +161,10 @@
                                     </div>
                                 </div>
                                 <div class="row">
-
+                                    <div class="custom-file">
+                                        <input type="file" class="custom-file-input" id="customFileLang" lang="es">
+                                        <label class="custom-file-label" for="customFileLang">Seleccionar Archivo</label>
+                                    </div>
                                     <div class="col-5 col-sm-6">
                                         <input class="form-control" type="file" placeholder="imagen" name="bigsize">
                                     </div>
